<resources>
    <string name="app_name">StorieS</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="email_error">Not a correct Email format</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="goToRegister">Don\'t have an account? Register</string>
    <string name="login_button">LOGIN</string>
    <string name="name">Name</string>
    <string name="register_button">REGISTER</string>
    <string name="goToLogin">Already has an account? Login</string>
    <string name="loginEmpty">Email and password can not be empty</string>
    <string name="authInputError">Invalid email and password format</string>
    <string name="loginSuccess">Login Success</string>
    <string name="log_out">Log Out</string>
    <string name="rvCardName">Name</string>
    <string name="rvCardDesc">Description</string>
    <string name="story_image_desc">Image of the story</string>
    <string name="fab_button_contentDesc">FAB Button</string>
    <string name="description_hint">Description</string>
    <string name="camera_btn">Camera</string>
    <string name="gallery_btn">Gallery</string>
    <string name="upload_btn">Upload</string>
    <string name="upload_success">Upload successful</string>
    <string name="upload_error">Image and description can not be empty</string>
    <string name="data_not_available">Data not available</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Map</string>
    <string name="upload_with_current_location">Upload with current location</string>
</resources>